--- a/index.html
+++ b/index.html
@@ -7,34 +7,41 @@
 </head>
 
 <body>
-    <div class="topo"></div>
-    <div class="btn-grupo">
-        <button class="botaotop" style="margin-left: 10px;">HOME</button>
-        <button class="botaotop" style="margin-left: 10px;">ABOUT</button>
-        <button class="botaotop" style="margin-left: 10px;">COMO AJUDAR</button>
+    <div style="overflow: auto;">
+        <div class="botaum" style="width: 97.9%; height: 35px;">
+            <a class="botaum1" href="#home"> PRINCIPAL  </a>
+            <a class="botaum1" href="#entenda"> ENTENDA  </a>
+            <a class="botaum1" href="#whohelp"> COMO AJUDAR  </a>
+            <a class="botaum1" href="#about"> SOBRE MIM  </a>
+        </div>
     </div>
-    <div id="image_background" class="centro">
-        <h1 class="titulo">AÇÃO CONTRA A MUDANÇA GLOBAL DO CLIMA</h1>
-        <h2 class="titulo">O Objetivo de Desenvolvimento Sustentável da ONU número 13 diz:<br> “Tomar medidas urgentes para combater a mudança climática e seus impactos”.
-        </h2>
+    <div id="home">
+        <div id="image_background" class="centro">
+            <h1 class="titulo">AÇÃO CONTRA A MUDANÇA GLOBAL DO CLIMA</h1>
+            <h2 class="titulo">O Objetivo de Desenvolvimento Sustentável da ONU número 13 diz:<br> “Tomar medidas urgentes para combater a mudança climática e seus impactos”.
+            </h2>
+        </div>
     </div>
-    <div class="row">
-        <div class="coluna" style="background-color: #aaa;">
+    <div id="entenda" class="row">
+        <div class="coluna">
             <h1> COLUNA </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros,
                 eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
         </div>
-        <div class="coluna" style="background-color: #ccc;">
+        <div class="coluna">
             <h1> COLUNA </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros,
                 eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna
                 tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
         </div>
-        <div class="coluna" style="background-color: #aaa;">
+        <div class="coluna">
             <h1> COLUNA </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros,
                 eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
         </div>
+    </div>
+    <div id="whohelp" class="centro whohelp">
+        <h1>Saiba como ajudar</h1>
     </div>
 </body>
 <html>
