--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a class="botaum1" href="#entenda"> ENTENDA  </a>
             <a class="botaum1" href="#whohelp"> COMO AJUDAR  </a>
             <a class="botaum1" href="#about"> SOBRE MIM  </a>
+            <a class="botaum1" href="#about"> FAQ </a>
         </div>
     </div>
     <div id="home">
@@ -22,26 +23,31 @@
             </h2>
         </div>
     </div>
-    <div id="entenda" class="row">
+    <div id="entenda" class="row c1">
+        <h1 style="text-align: center; text-shadow: 2px 2px white;"> CAUSAS </h1>
         <div class="coluna">
-            <h1> COLUNA </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros,
-                eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+            <h2> Efeito Estufa </h2>
+            <p>Este é um fenômeno natural pelo qual o planeta retém o calor emitido pelo sol, garantindo que a atmosfera mantenha uma temperatura adequada para a existência de vida na Terra. Sem o efeito estufa, o nosso planeta teria temperaturas extremamente
+                baixas, prejudicando a sobrevivência da maioria dos seres vivos.</p>
         </div>
         <div class="coluna">
-            <h1> COLUNA </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros,
-                eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna
-                tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+            <h2> O que causa </h2>
+            <p>Tudo começa com os raios solares que chegam ao nosso planeta. Em torno de 50% da radiação infravermelho fica retida na atmosfera, enquanto o restante chega até a superfície, aquecendo-a e irradiando calor. Os gases do efeito estufa funcionam
+                como uma espécie de manta protetora que impede que esse calor seja devolvido para o espaço, absorvendo e o prendendo na atmosfera terrestre.</p>
         </div>
         <div class="coluna">
-            <h1> COLUNA </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros,
-                eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+            <h2> Como evitar </h2>
+            <p>O aquecimento global é um problema do mundo todo e, por isso, deve ser tratado como prioridade, sem exceções. É importante pressionar os chefes de estado e parlamentares para que instituam políticas que possibilitem um desenvolvimento sustentável,
+                capazes de garantir o fomento de uma economia de baixo carbono. As empresas precisam se adequar à nova realidade enfrentada pelo planeta, e o consumidor deve estar atento para cobrar políticas que tenham como foco a o desenvolvimento sustentável.</p>
         </div>
     </div>
     <div id="whohelp" class="centro whohelp">
         <h1>Saiba como ajudar</h1>
     </div>
+
+    <div id="rodape">
+        <p> JA Brasil 2020 - Meu Primeiro Site</p>
+    </div>
+
 </body>
 <html>
