--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div style="overflow: auto;">
         <div class="botaum" style="width: 97.9%; height: 35px;">
             <a class="botaum1" href="#home"> PRINCIPAL  </a>
-            <a class="botaum1" href="#entenda"> ENTENDA  </a>
+            <a class="botaum1" href="entenda.html"> ENTENDA  </a>
             <a class="botaum1" href="#whohelp"> COMO AJUDAR  </a>
             <a class="botaum1" href="#about"> SOBRE MIM  </a>
             <a class="botaum1" href="#about"> FAQ </a>
@@ -21,24 +21,6 @@
             <h1 class="titulo">AÇÃO CONTRA A MUDANÇA GLOBAL DO CLIMA</h1>
             <h2 class="titulo">O Objetivo de Desenvolvimento Sustentável da ONU número 13 diz:<br> “Tomar medidas urgentes para combater a mudança climática e seus impactos”.
             </h2>
-        </div>
-    </div>
-    <div id="entenda" class="row c1">
-        <h1 style="text-align: center; text-shadow: 2px 2px white;"> CAUSAS </h1>
-        <div class="coluna">
-            <h2> Efeito Estufa </h2>
-            <p>Este é um fenômeno natural pelo qual o planeta retém o calor emitido pelo sol, garantindo que a atmosfera mantenha uma temperatura adequada para a existência de vida na Terra. Sem o efeito estufa, o nosso planeta teria temperaturas extremamente
-                baixas, prejudicando a sobrevivência da maioria dos seres vivos.</p>
-        </div>
-        <div class="coluna">
-            <h2> O que causa </h2>
-            <p>Tudo começa com os raios solares que chegam ao nosso planeta. Em torno de 50% da radiação infravermelho fica retida na atmosfera, enquanto o restante chega até a superfície, aquecendo-a e irradiando calor. Os gases do efeito estufa funcionam
-                como uma espécie de manta protetora que impede que esse calor seja devolvido para o espaço, absorvendo e o prendendo na atmosfera terrestre.</p>
-        </div>
-        <div class="coluna">
-            <h2> Como evitar </h2>
-            <p>O aquecimento global é um problema do mundo todo e, por isso, deve ser tratado como prioridade, sem exceções. É importante pressionar os chefes de estado e parlamentares para que instituam políticas que possibilitem um desenvolvimento sustentável,
-                capazes de garantir o fomento de uma economia de baixo carbono. As empresas precisam se adequar à nova realidade enfrentada pelo planeta, e o consumidor deve estar atento para cobrar políticas que tenham como foco a o desenvolvimento sustentável.</p>
         </div>
     </div>
     <div id="whohelp" class="centro whohelp">
