--- a/index.html
+++ b/index.html
@@ -1,35 +1,72 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
     <link href="style.css" rel="stylesheet">
-    <title> Ação Contra A Mudança Global Do Clima </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> ACMGC - Home </title>
 </head>
 
 <body>
     <div style="overflow: auto;">
-        <div class="botaum" style="width: 97.9%; height: 35px;">
+        <div class="botaum">
             <a class="botaum1" href="#home"> PRINCIPAL  </a>
-            <a class="botaum1" href="entenda.html"> ENTENDA  </a>
-            <a class="botaum1" href="#whohelp"> COMO AJUDAR  </a>
+            <a class="botaum1" href="#entenda"> ENTENDA </a>
+            <a class="botaum1" href="#metas"> METAS </a>
+            <a class="botaum1" href="#whohelp"> ESTAMOS SENDO AFETADOS? </a>
             <a class="botaum1" href="#about"> SOBRE MIM  </a>
             <a class="botaum1" href="#about"> FAQ </a>
         </div>
     </div>
-    <div id="home">
-        <div id="image_background" class="centro">
-            <h1 class="titulo">AÇÃO CONTRA A MUDANÇA GLOBAL DO CLIMA</h1>
-            <h2 class="titulo">O Objetivo de Desenvolvimento Sustentável da ONU número 13 diz:<br> “Tomar medidas urgentes para combater a mudança climática e seus impactos”.
-            </h2>
+    <section>
+        <div id="home">
+            <div id="image_background" class="centro">
+                <h1 class="titulo">AÇÃO CONTRA A MUDANÇA GLOBAL DO CLIMA</h1>
+                <h2 class="titulo">Tomar medidas urgentes para combater a mudança climática e seus impactos.</h2>
+                <a class="botaum2" target="_blanck" href="https://nacoesunidas.org/pos2015/ods13/"> Mais sobre essa ODS</a>
+            </div>
         </div>
-    </div>
-    <div id="whohelp" class="centro whohelp">
-        <h1>Saiba como ajudar</h1>
-    </div>
+    </section>
+    <section>
+        <div id="entenda" class="centro c1">
+            <h1>Entenda</h1>
+            <iframe width="350px" height="300px" src="https://www.youtube.com/embed/As2hcTD2Olk?list=PLUZOt6bFc2fh8TFRaD88odEHZVcq1TvG8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p class="centro cc3 colunavideo">A mudança climática é causada por atividades humanas e seus impactos estão ameaçando a maneira como vivemos – e o futuro do nosso planeta. Ao abordarmos as mudanças climáticas, podemos construir um mundo sustentável para todos e para o futuro.</p>
+        </div>
 
-    <div id="rodape">
-        <p> JA Brasil 2020 - Meu Primeiro Site</p>
-    </div>
+    </section>
+    <section>
+        <div id="metas" class="centro c2">
+            <h1> METAS </h1>
 
+            <h4 class="coluna">Reforçar a resiliência e a capacidade de adaptação a riscos relacionados ao clima e às catástrofes naturais em todos os países.</h4>
+            <h4 class="coluna">Integrar medidas da mudança do clima nas políticas, estratégias e planejamentos nacionais.</h4>
+            <h4 class="coluna">Melhorar a educação, aumentar a conscientização e a capacidade humana e institucional sobre mitigação, adaptação, redução de impacto e alerta precoce da mudança do clima.</h4>
+        </div>
+
+    </section>
+    <section>
+        <div id="whohelp" class="centro">
+            <h2> Estamos sendo afetados? </h2>
+            <p style="font-size: 20px; padding-left: 15px" class="centro coluna1">Sim. O clima severo e o aumento do nível do mar estão afetando as pessoas e suas propriedades nos países desenvolvidos e em desenvolvimento. Desde o agricultor familiar nas Filipinas até um empresário em Londres, a mudança climática está afetando
+                todos – e especialmente os mais pobres e vulneráveis, bem como grupos marginalizados, como mulheres, crianças e idosos.</p>
+        </div>
+
+    </section>
+    <section>
+        <div class="separar c3">
+            <h1 style="color: white" id="about" class="centro "> SOBRE MIM </h1>
+            <p class="coluna1 aboutme"> Me chamo Marcos, tenho 17 anos, resido na cidade de Ascurra-SC. Sou designer gráfico e editor. Estou estudando programação em C e estou procurando me aprofundar em Web Designer.</p>
+            <img class="coluna1 photo" src="img/photo.png">
+        </div>
+    </section>
+    <section>
+        <div class="rodape">
+            <h2 class="coluna1"> JA Brasil</h2>
+            <h2 style="float: right;" class="coluna1"> Créditos</h2>
+            <p class="coluna1"> meu primeiro site </p>
+            <p class="coluna1">estrategiaods, unsplash e onu</p>
+        </div>
+    </section>
 </body>
 <html>
